Fix Dark Mode color issue

--- a/source/css/_partial/dark.styl
+++ b/source/css/_partial/dark.styl
@@ -11,6 +11,11 @@
         .menu .current-menu-item-link {
             color: white;
         }
+        .menu .menu-item-link {
+            &:hover {
+                color: white;
+            }
+        }
     }
 
     .posts {
@@ -39,11 +44,11 @@
         }
     }
 
-    .prev_next {
-        .prev {
+    #prev_next {
+        a {
             color: #e5e5e5;
         }
-        .next {
+        .article-nav-title {
             color: #e5e5e5;
         }
     }
