--- a/source/css/_partial/post.styl
+++ b/source/css/_partial/post.styl
@@ -54,8 +54,6 @@
         margin: 0
     }
     .highlight .gutter {
-        /*padding-left: 10px;
-    width: 10px;*/
         display: none;
     }
     .highlight .code pre {
